--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Database Object Catalog: BLM GIS of the United States</title>
-  <meta name="description" content="Enterprise Geodatabase schema browser and documentation catalog for BLM GIS feature classes of the United States.">
+  <title>BLM GIS Web Services Catalog</title>
+  <meta name="description" content="Catalog and documentation for BLM GIS web services of the United States.">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
   <header>
-    <h1>Database Object Catalog: BLM GIS of the United States</h1>
+    <h1>BLM GIS Web Services Catalog</h1>
     <nav>
       <button id="datasetsTab" class="tab-button active">Datasets</button>
       <button id="attributesTab" class="tab-button">Attributes</button>
