--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>BLM GIS Web Services Catalog</title>
   <meta name="description" content="Catalog and documentation for BLM GIS web services of the United States.">
   <link rel="stylesheet" href="styles.css" />
+  <!-- ArcGIS Maps SDK for JavaScript -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css" />
+  <script src="https://js.arcgis.com/4.29/"></script>
 </head>
 
 <body>
