--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <title>BLM GIS Web Services Catalog</title>
   <meta name="description" content="Catalog and documentation for BLM GIS web services of the United States.">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles-new.css" />
   <!-- ArcGIS Maps SDK for JavaScript -->
-  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css" />
+  <link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/dark/main.css" />
   <script src="https://js.arcgis.com/4.29/"></script>
 </head>
 
