--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
           <select name="geometry_type">
             <option value="">(select)</option>
             <option value="POINT">POINT</option>
+            <option value="MULTIPOINT">MULTIPOINT</option>
             <option value="POLYLINE">POLYLINE</option>
             <option value="POLYGON">POLYGON</option>
             <option value="TABLE">TABLE</option>
+            <option value="RASTER">RASTER</option>
           </select>
         </label>
 
