--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
   </main>
 
-  <script src="app.js?v=25"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
