lots of bugs and code clean-up

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BLM GIS Web Services Catalog</title>
   <meta name="description" content="Catalog and documentation for BLM GIS web services of the United States.">
   <link rel="stylesheet" href="styles-new.css?v=18" />
